<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QuizBattle</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading…</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings Used for Navigation Bar-->
    <string name="navItem1">Home</string>
    <string name="navItem2">Social</string>
    <string name="navItem3">Leaderboard</string>
    <!-- Strings used for TopAppBar -->
    <string name="settingsIcon">Settings</string>

    <!-- Strings used for HomeScreen-->
    <string name="playButton">Play</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dailyQuizTitle">DAILY QUIZ</string>
    <string name="dailyQuizCategory">Category</string>
    <string name="quizBannerDesc">Quiz Banner</string>
    <string name="versusBannerDesc">PLAYGROUND</string>
    <string name="versusTitle">PLAYGROUND</string>
    <string name="versusDesc">Test yourself in different categories</string>
    <string name="friendsTitle">FRIENDS</string>
    <string name="addFriendsButton">ADD FRIENDS</string>
    <string name="friendsScrollDescription">Friends List</string>
    <string name="userName">User 1</string>
    <string name="removeFriend">Remove Friend</string>
    <string name="profileTitle">PROFILE</string>
    <string name="profilePictureDesc">Profile Picture</string>
    <string name="allTimeScore">6871p</string>
    <string name="quizzesPlayedTitle">Quizzes Played</string>
    <string name="allTimeScoreTitle">All Time Score</string>
    <string name="quizzesPlayed">4</string>
    <string name="tabLayoutDescription">A tab layout for navigating between different views</string>
    <string name="viewPagerDescription">ViewPager</string>
    <string name="ok">OK</string>
    <string name="game_rules_title">Info</string>
    <string name="_222">222</string>
    <string name="descDaily">Welcome to our exciting quiz game mode, where you can test your knowledge and have a blast
        with four different themes - General Knowledge, Sports, History, and Geography. Every day, we\'ll present you
        with a new set of questions from one of these themes, giving you a unique and engaging challenge each time you
        play.\n\nThe Daily Trivia Challenge is designed to keep your mind sharp and your skills fresh. You only get one
        chance per day to prove your mastery, so make sure to give it your best shot, as your first attempt is the only
        one that counts!
    </string>

    <string name="descPlay">In PlaygroundQuiz, you\'ll explore a world of knowledge at your fingertips. Delve into quizzes from a wide array of subjects, designed for players of all levels, from curious beginners to seasoned trivia buffs. Our ever-expanding quiz library ensures that you\'ll never run out of challenges to test your mettle.\n\nAs you progress through the quizzes in PlaygroundQuiz, you\'ll not only gain valuable knowledge but also build the confidence and expertise needed to tackle the Daily Quiz mode. Each quiz victory in PlaygroundQuiz brings you one step closer to the daily triumphs that await you.</string>



</resources>