<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeView">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <view
                    android:id="@+id/view"
                    class="com.google.android.material.card.MaterialCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="@dimen/cardview_default_elevation"
                    android:outlineSpotShadowColor="@color/cardview_dark_background"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Media -->
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            android:contentDescription="@string/quizBannerDesc"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/quiz_banner" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="10dp"
                            android:gravity="center">

                            <!-- Title, secondary and supporting text -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dailyQuizTitle"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/dailyQuizCategory"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary" />

                        </LinearLayout>

                        <!-- Buttons -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="horizontal"
                            android:layout_gravity="center">

                            <com.google.android.material.button.MaterialButton
                                    style="?attr/buttonStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/playButton" android:id="@+id/playdailyButton"/>
                        </LinearLayout>

                    </LinearLayout>
                </view>

                <view
                    android:id="@+id/view2"
                    class="com.google.android.material.card.MaterialCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="@dimen/cardview_default_elevation"
                    android:outlineSpotShadowColor="@color/cardview_dark_background"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Media -->
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            android:contentDescription="@string/versusBannerDesc"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/versus_banner" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="10dp"
                            android:gravity="center">

                            <!-- Title, secondary and supporting text -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/versusTitle"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/versusDesc"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary" />

                        </LinearLayout>

                        <!-- Buttons -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="horizontal"
                            android:layout_gravity="center">

                            <com.google.android.material.button.MaterialButton
                                    style="?attr/buttonStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/playButton" android:id="@+id/playFriendButton"/>
                        </LinearLayout>

                    </LinearLayout>
                </view>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>

